[gd_scene load_steps=4 format=3 uid="uid://c2moylfnox5c4"]

[ext_resource type="Script" uid="uid://b6gcnnvafi30e" path="res://enemy/enemy_spawner.gd" id="1_cjrnn"]
[ext_resource type="PackedScene" uid="uid://3rih3lcco63f" path="res://enemy/enemy.tscn" id="2_cjw55"]
[ext_resource type="PackedScene" uid="uid://b6goasrkiplta" path="res://boss/boss.tscn" id="3_mer2g"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_cjrnn")
enemy_scene = ExtResource("2_cjw55")
boss_scene = ExtResource("3_mer2g")
spawn_radius = 370.0

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="BossSpawnTimer" type="Timer" parent="."]
wait_time = 120.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="BossSpawnTimer" to="." method="_on_boss_spawn_timer_timeout"]
